Update to Jexxa 9.0.0 (#615)
* removed deprecated properties and updated to jexxa-adapters 3.0.0 (snapshot)

* Updated to language level java21

* Start refactoring Binding and Listener in JexxaIntegrationTest to integrate communication of messages and events

* Added DomainEventRecorder for unit tests and removed MessageBinding from Unit tests

* code cleanup

* Refactor: RESTBinding now uses the same Binding concept as JMSBinding, so that we have a unified method to request Bindings to our application.

- Removed old binding methods

* Create explicitly BoundedContextHandler to avoid warning of this escape

* removed usage of deprecated classes

* Code cleanup

* Updated to latest version

* Update (#614)

* Bump org.junit.platform:junit-platform-launcher from 6.0.0 to 6.0.1

* Bump org.junit.jupiter:junit-jupiter-params from 6.0.0 to 6.0.1

* Bump org.junit.jupiter:junit-jupiter-engine from 6.0.0 to 6.0.1

* Bump org.apache.activemq:artemis-jms-client from 2.43.0 to 2.44.0

* Bump io.smallrye:smallrye-open-api-core from 4.2.0 to 4.2.1

---------

Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>

---------

Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>